# five_three_one

./: .gitignore  Cargo.toml  README.md  fill_readme.sh  setup_reports_index.sh
docs/: index.html
src/: default_weights.toml  index.rs  main.rs  manual.rs
src/templates/: plan.html
templates/: day.html  index.css  index.html  index.js  month.html  plan copy.html  plan.css  plan.html  style.css  support.html  week.html
