[package]
name = "five_three_one"
version = "0.1.0"
authors = ["Robert Masen <robert.masen@smartthings.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1", features = ["serde-1"] }
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
structopt = "0.3"
tera = "1.6"
toml = "0.5"
